--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,17 @@
   height: 90%;
   border-radius: 10px;
 }
+
+.camera--loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+
+  font-size: 1.5rem;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+  border-radius: 10px;
+}
