--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,10 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scaleX(-1);
   z-index: 9;
   width: 90%;
+  max-height: 90%;
   border-radius: 10px;
 }
 
