--- a/src/App.css
+++ b/src/App.css
@@ -3,47 +3,110 @@
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 100%;
+  margin: 0 auto
 }
 
+/* Header Component */
+.Header {
+  background-color:#286398;
+  height: 60px;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 20px;
+  margin-bottom: 20px;
+}
+
+.header--title {
+  color: rgba(255, 255, 255, 0.87);
+  text-shadow: 1px 1px 3px #FF8A55;
+  font-size: 1.25rem;
+}
+
+.header--text {
+  font-size: 1rem;
+}
+
+.header--text > a {
+  font-weight: 500;
+  color: #FFE79C;
+  text-decoration: inherit;
+}
+.header--text > a:hover {
+  color: #EBBE30;
+}
+
+/* Camera Component */
 .camera {
   position: relative;
-  background-color: aliceblue;
+  background-color: rgba(255, 255, 255, 0.87);
   max-width: 640px;
   min-height: 480px;
-  width: 90%;
-  height: 90%;
-  border-radius: 10px;
+  width: 100%;
+  height: 100%;
 
-  padding: 20px 20px 50px 20px;
-  margin: 20px auto 20px auto;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin-top: 10px;
+  margin-inline: auto;
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 .camera--main {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%) scaleX(-1);
   z-index: 9;
-  width: 90%;
-  max-height: 90%;
-  border-radius: 10px;
+  width: 100%;
+  max-height: 100%;
+  
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .camera--loading {
-  position: absolute;
   top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10;
 
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: rgba(255, 255, 255, 0.87);
   background-color: rgba(0, 0, 0, 0.5);
   padding: 10px 20px;
   border-radius: 10px;
   margin: 0;
 }
+
+/* ImageCollection Component  */
+.ImageCollection {
+  display: block;
+  width: 90%;
+  margin: auto;
+}
+
+.collection--panel {
+  display: flex;
+  justify-content: end;
+  max-width: 640px;
+  margin: auto;
+  padding-inline: 10px;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  
+}
+
+.panel--button {
+  margin: 10px 5px;
+  padding: 5px 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.87);
+}
+
