working photos download

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@
 
 .collection--panel {
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
   max-width: 640px;
   margin: auto;
   padding-inline: 10px;
@@ -103,6 +103,15 @@
   
 }
 
+.panel--input {
+  margin: 10px auto 10px 0;
+  width: 250px;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+
+}
+
 .panel--button {
   margin: 10px 5px;
   padding: 5px 10px;
@@ -110,3 +119,67 @@
   box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.87);
 }
 
+/* ImageList Component */
+.ImageList {
+  width: 80%;
+  margin: 20px auto;
+}
+
+.list--title {
+  margin: 0;
+  background-color: rgba(40, 99, 152, 1);
+  text-align: left;
+  font-size: 1.25rem;
+
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  padding: 10px;
+}
+
+.list--container {
+  display: flex;
+  overflow-x: auto;
+  background-color: rgba(40, 99, 152, 0.4);
+  padding-inline: 20px;
+}
+
+.list--img {
+  position: relative;
+}
+
+.list--img--photo {
+  width: 200px;
+  border-radius: 10px;
+  margin: 10px 5px;
+}
+
+.list--img--delete {
+  position: absolute;
+  right: 10px;
+  top: 15px;
+  padding: 5px 10px;
+
+  background-color: rgba(158, 50, 1, 0.7);
+}
+
+.list--container::-webkit-scrollbar {
+  height: 10px;
+}
+
+/* Track */
+.list--container::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+/* Handle */
+.list--container::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: rgba(199, 74, 17,0.8); 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+.list--container::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(199, 74, 17,0.4); 
+}
